--- a/src/main/webapp/html/header.html
+++ b/src/main/webapp/html/header.html
@@ -18,7 +18,7 @@
 
             <!-- 헤더 로고-->
             <div class="header-nav-img">
-                <a href=""> <!-- 이미지 누르면 메인 화면으로 이동하도록 .. 나중에 링크 추가하기-->
+                <a href="../html/header.html"> <!-- 이미지 누르면 메인 화면으로 이동하도록 .. 나중에 링크 추가하기-->
                     <img id="hugo-logo" src="../images/휴카로고_예비1.png" alt="hugo logo">
                 </a>
             </div>
@@ -52,7 +52,7 @@
             </div>
             <div class="header-nav-login-slash"> | </div>
             <!-- 로그인 버튼-->
-            <a href=""> <!-- 로그인 / 회원가입 페이지 연결하기-->
+            <a href="../html/login.html"> <!-- 로그인 / 회원가입 페이지 연결하기-->
                 <div class="header-nav-login-btn">
                     <i class="fa-regular fa-circle-user"></i>
                     <div id="login">로그인</div>
