--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -20,14 +20,14 @@
 
             <!-- 헤더 로고-->
             <div class="header-nav-img">
-                <a href=""> <!-- 이미지 누르면 메인 화면으로 이동하도록 .. 나중에 링크 추가하기-->
+                <a href="../html/header.html"> <!-- 이미지 누르면 메인 화면으로 이동하도록 .. 나중에 링크 추가하기-->
                     <img id="hugo-logo" src="../images/휴카로고_예비1.png" alt="hugo logo">
                 </a>
             </div>
 
             <!-- 네비게이션 버튼-->
             <div class="header-nav-btn">
-                <a href=""> <!-- 예약 페이지 연결-->
+                <a href="./Reservation.jsp"> <!-- 예약 페이지 연결-->
                     <div id="resevation-pg" class="hearder-nav-btn-item">예약</div>
                 </a>
                 <a href=""> <!-- 결제 페이지 연결-->
@@ -54,7 +54,7 @@
             </div>
             <div class="header-nav-login-slash"> | </div>
             <!-- 로그인 버튼-->
-            <a href=""> <!-- 로그인 / 회원가입 페이지 연결하기-->
+            <a href="../html/login.html"> <!-- 로그인 / 회원가입 페이지 연결하기-->
                 <div class="header-nav-login-btn">
                     <i class="fa-regular fa-circle-user"></i>
                     <div id="login">로그인</div>
@@ -69,7 +69,25 @@
         <div class="content-main">
             <div class="login-box">
                 <div class="login-title">로그인</div>
-                <div ></div>
+                <!--로그인 입력창-->
+                <form action="login" class="login">
+                    <input class="login-id login-input" type="text" placeholder="아이디를 입력하세요.">
+                    <input class="login-pw login-input" type="password" placeholder="비밀번호를 입력하세요.">
+                    <input class="login-submit login-input" type="submit" value="로그인"
+                        onclick="location.href='~'"> <!-- 메인 화면 나중에 연결하기-->
+                </form>
+                <hr>
+                <!--회원가입 유도창-->
+                <div class="signin">
+                    <div class="signin-plz singin-icon"><i class="fa-solid fa-hand"></i></div>
+                    <div class="signin-plz signin-wait">아직 회원이 아니신가요?</div>
+                    <div class="signin-plz signin-ad ">회원가입하고 다양한 혜택도 받아가세요!</div>
+                    <div class="signin-go "><button class="login-input login-submit"
+                        onclick="location.href='signin.html'" >회원가입 하러 가기</button></div> <!-- 회원가입페이지 연결-->
+                </div>
+
+                <!-- sns 연동-->
+                <button></button>
             </div>
         </div>
     </div>
