메인페이지 예비사진 추가

--- a/src/main/webapp/html/mainpage.html
+++ b/src/main/webapp/html/mainpage.html
@@ -6,6 +6,10 @@
     <title>메인페이지</title>
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/mainpage.css">
+
+
+
 </head>
 <body>
     <!--헤더-->
@@ -63,18 +67,12 @@
 
 
     <!-- 메인페이지  -->
-    <div>
-
-    
+    <div class="mainpage">
+        <div class="mainpage_picture_div">
+        <img src="../images/메인_람보르기니사진.jpg" style="width:100%; height: 500px;">
+        </div>
+        <div class=""></div>
     </div>
-<h1>메인페이지부분</h1>
-<h1>메인페이지부분</h1>
-<h1>메인페이지부분</h1>
-<h1>메인페이지부분</h1>
-<h1>메인페이지부분</h1>
-<h1>메인페이지부분</h1>
-<h1>메인페이지부분</h1>
-<h1>메인페이지부분</h1>
 
 
 
