회원가입 페이지 수정 2 - name 태그, value값 조정

--- a/src/main/webapp/html/signup.html
+++ b/src/main/webapp/html/signup.html
@@ -173,8 +173,8 @@
                         <div class="signin-input signin-input-id">
                             <div class="signin-id">성별</div>
                             <div class="signin-id signin-gender">
-                                <div><input class="input-gender" type="radio" name="gender">남성</div>
-                                <div><input class="input-gender" type="radio" name="gender">여성</div>
+                                <div><input class="input-gender" type="radio" name="gender" value="F">남성</div>
+                                <div><input class="input-gender" type="radio" name="gender" value="M">여성</div>
                             </div>
                         </div>
                         <!-- 운전면허번호 -->
@@ -182,13 +182,13 @@
                             <div class="signin-id">운전면허번호</div>
                             <div class="input-box">
                                 <div class=" signin-li">
-                                    <div><input class="input-li" type="text" name="license"></div>
+                                    <div><input class="input-li" type="text" name="license-1"></div>
                                     <div class="input-li-slash">-</div>
-                                    <div><input class="input-li" type="text" name="license"></div>
+                                    <div><input class="input-li" type="text" name="license-2"></div>
                                     <div class="input-li-slash">-</div>
-                                    <div><input class="input-li" type="text" name="license"></div>
+                                    <div><input class="input-li" type="text" name="license-3"></div>
                                     <div class="input-li-slash">-</div>
-                                    <div><input class="input-li" type="text" name="license"></div>
+                                    <div><input class="input-li" type="text" name="license-4"></div>
                                 </div>
                                 <div><button class="id-chd">확인</button></div>
                             </div>
@@ -197,9 +197,9 @@
                         <div class="signin-input signin-input-id">
                             <div class="signin-id">면허취득일</div>
                             <div class="signin-birth">
-                                <input class="birth-box" name="birth-year" id="birth-year" type="text"
+                                <input class="birth-box" name="license-year" id="license-year" type="text"
                                     placeholder="취득년도">
-                                <select class="birth-box" name="birth-month" id="birth-month">
+                                <select class="birth-box" name="license-month" id="license-month">
                                     <option disabled selected>월</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -215,7 +215,7 @@
                                     <option value="12">12</option>
 
                                 </select>
-                                <select class="birth-box" name="birth-date" id="birth-date">
+                                <select class="birth-box" name="license-date" id="license-date">
                                     <option disabled selected>일</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -255,7 +255,13 @@
                                 <div class="signin-id">전화번호</div>
                                 <div class="input-box">
                                     <div class="input-item">
-                                        <input class="input-id" type="text" name="tel">
+                                        <div class=" signin-tel">
+                                            <div><input class="input-tel" type="text" name="tel-1"></div>
+                                            <div class="input-li-slash">-</div>
+                                            <div><input class="input-tel" type="text" name="tel-2"></div>
+                                            <div class="input-li-slash">-</div>
+                                            <div><input class="input-tel" type="text" name="te1-3"></div>
+                                        </div>
                                     </div>
                                     <div><button class="id-chd">확인</button></div>
                                 </div>
@@ -272,9 +278,9 @@
                             </div>
                             <!-- 동의 문구 -->
                             <div class="checkbox">
-                                <div><input type="checkbox"> SMS/전화 수신 동의 (선택)</div>
-                                <div><input type="checkbox"> 이메일 수신 동의 (선택)</div>
-                                <div><input type="checkbox"> 개인정보수집 및 이용 동의</div>
+                                <div><input type="checkbox" name="sms-ok"> SMS/전화 수신 동의 (선택)</div>
+                                <div><input type="checkbox" name="email-ok"> 이메일 수신 동의 (선택)</div>
+                                <div><input type="checkbox" name="l-am-ok"> 개인정보수집 및 이용 동의</div>
                             </div>
                             <!-- 회원가입버튼-->
                             <div class="signin-btn">
