--- a/src/main/webapp/html/mainpage.html
+++ b/src/main/webapp/html/mainpage.html
@@ -87,16 +87,23 @@
                 <div class="show_recommend_car_box">
                     <div class="show_recommend_car">
                         <div class="recommend_car_image1"></div>
+                        <div class="dividing_line"></div>
+                        <div class="recommend_car_info"></div>
                     </div>
                     <div class="show_recommend_car">
-                        <div class="recommend_car_image2">
-                        </div>
+                        <div class="recommend_car_image2"></div>
+                        <div class="dividing_line"></div>
+                        <div class="recommend_car_info"></div>
                     </div>
                     <div class="show_recommend_car">
                         <div class="recommend_car_image3"></div>
+                        <div class="dividing_line"></div>
+                        <div class="recommend_car_info"></div>
                     </div>    
                     <div class="show_recommend_car">
                         <div class="recommend_car_image4"></div>
+                        <div class="dividing_line"></div>
+                        <div class="recommend_car_info"></div>
                     </div>    
                 </div>
             </div>
@@ -107,15 +114,23 @@
                 <div class="show_cheap_car_box">
                     <div class="show_cheap_car">
                         <div class="cheap_car_image1"></div>
+                        <div class="dividing_line"></div>
+                        <div class="cheap_car_info"></div>
                     </div>
                     <div class="show_cheap_car">
                         <div class="cheap_car_image2"></div>
+                        <div class="dividing_line"></div>
+                        <div class="cheap_car_info"></div>
                     </div>
                     <div class="show_cheap_car">
                         <div class="cheap_car_image3"></div>
+                        <div class="dividing_line"></div>
+                        <div class="cheap_car_info"></div>
                     </div>    
                     <div class="show_cheap_car">
                         <div class="cheap_car_image4"></div>
+                        <div class="dividing_line"></div>
+                        <div class="cheap_car_info"></div>
                     </div>    
                 </div>
             </div>
@@ -126,15 +141,23 @@
                 <div class="show_old_car_box">
                     <div class="show_old_car">
                         <div class="old_car_image1"></div>
+                        <div class="dividing_line"></div>
+                        <div class="old_car_info"></div>
                     </div>
                     <div class="show_old_car">
                         <div class="old_car_image2"></div>
+                        <div class="dividing_line"></div>
+                        <div class="old_car_info"></div>
                     </div>
                     <div class="show_old_car">
                         <div class="old_car_image3"></div>
+                        <div class="dividing_line"></div>
+                        <div class="old_car_info"></div>
                     </div>    
                     <div class="show_old_car">
                         <div class="old_car_image4"></div>
+                        <div class="dividing_line"></div>
+                        <div class="old_car_info"></div>
                     </div>    
                 </div>
             </div>
@@ -145,15 +168,23 @@
                 <div class="show_popular_car_box">
                     <div class="show_popular_car">
                         <div class="popular_car_image1"></div>
+                        <div class="dividing_line"></div>
+                        <div class="popular_car_info"></div>
                     </div>
                     <div class="show_popular_car">
                         <div class="popular_car_image2"></div>
+                        <div class="dividing_line"></div>
+                        <div class="popular_car_info"></div>
                     </div>
                     <div class="show_popular_car">
                         <div class="popular_car_image3"></div>
+                        <div class="dividing_line"></div>
+                        <div class="popular_car_info"></div>
                     </div>    
                     <div class="show_popular_car">
                         <div class="popular_car_image4"></div>
+                        <div class="dividing_line"></div>
+                        <div class="popular_car_info"></div>
                     </div>    
                 </div>
             </div>
