car dao,dto 정상코드 복붙 / payment.jsp 하는 중 ,,

--- a/src/main/webapp/html/payment.html
+++ b/src/main/webapp/html/payment.html
@@ -64,6 +64,9 @@
     </div>
 
 
+    <div class="titleBox"> 
+        <div class="titleText1">결제정보 </div>
+    </div>
 
     <h1>결제</h1>
     <h1>결제</h1>
@@ -75,7 +78,8 @@
     <h1>결제</h1>
     <h1>결제</h1>
     <h1>결제</h1>
-    <h1>결제</h1> <h1>결제</h1>
+    <h1>결제</h1> 
+    <h1>결제</h1>
     
 
 
