--- a/src/main/webapp/html/footer.html
+++ b/src/main/webapp/html/footer.html
@@ -22,11 +22,11 @@
                                     휴카 서비스
                                 </p>
                                 <div class="p1_min">
-                                    <a class="a1_font">단기렌트</a>
-                                    <a class="a1_font">해외렌트</a>
-                                    <a class="a1_font">월렌트</a>
-                                    <a class="a1_font">휴카 회원 혜택</a>
-                                    <a class="a1_font">자주 묻는 질문</a>
+                                    <span class="a1_font">단기렌트</span>
+                                    <span class="a1_font">해외렌트</span>
+                                    <span class="a1_font">월렌트</span>
+                                    <span class="a1_font">휴카 회원 혜택</span>
+                                    <span class="a1_font">자주 묻는 질문</span>
                                 </div>
                         </div>
                         <div class="p2box">
@@ -34,12 +34,12 @@
                                     국내인기 지역
                                 </p>
                                 <div class="p2-1_min">
-                                    <a class="a1_font">제주 렌트카</a>
-                                    <a class="a1_font">부산 렌트카</a>
-                                    <a class="a1_font">여수 렌트카</a>
-                                    <a class="a1_font">경주 렌트카</a>
-                                    <a class="a1_font">서울 렌트카</a>
-                                    <a class="a1_font">강남구 월렌트</a>
+                                    <span class="a1_font">제주 렌트카</span>
+                                    <span class="a1_font">부산 렌트카</span>
+                                    <span class="a1_font">여수 렌트카</span>
+                                    <span class="a1_font">경주 렌트카</span>
+                                    <span class="a1_font">서울 렌트카</span>
+                                    <span class="a1_font">강남구 월렌트</span>
                                 </div>
                         </div>
                         <div class="p3box">
@@ -47,12 +47,12 @@
                                     해외 인기 지역
                                 </p>
                                 <div class="p2-2_min">
-                                    <a class="a1_font">오키나와 렌트카</a>
-                                    <a class="a1_font">괌 렌트카</a>
-                                    <a class="a1_font">후쿠오카 렌트카</a>
-                                    <a class="a1_font">사이판 렌트카</a>
-                                    <a class="a1_font">삿포로 렌트카</a>
-                                    <a class="a1_font">해외 편도 렌트카</a>
+                                    <span class="a1_font">오키나와 렌트카</span>
+                                    <span class="a1_font">괌 렌트카</span>
+                                    <span class="a1_font">후쿠오카 렌트카</span>
+                                    <span class="a1_font">사이판 렌트카</span>
+                                    <span class="a1_font">삿포로 렌트카</span>
+                                    <span class="a1_font">해외 편도 렌트카</span>
                                 </div>
                         </div>
                         <div class="p4box">
@@ -60,11 +60,11 @@
                                     회사 정보
                                 </p>
                                 <div class="p3-1_min">
-                                    <a class="a1_font">2조 소개</a>
-                                    <a class="a1_font">휴카 서비스</a>
-                                    <a class="a1_font">휴카 파트너스</a>
-                                    <a class="a1_font">2조 채용</a>
-                                    <a class="a1_font">입점 문의</a>
+                                    <span class="a1_font">2조 소개</span>
+                                    <span class="a1_font">휴카 서비스</span>
+                                    <span class="a1_font">휴카 파트너스</span>
+                                    <span class="a1_font">2조 채용</span>
+                                    <span class="a1_font">입점 문의</span>
                                 </div>
                         </div>
                         <div class="p5box">
@@ -72,8 +72,8 @@
                                     통합 약관
                                 </p>
                                 <div class="p3-2_min">
-                                    <a class="a1_font">개인정보 처리방침</a>
-                                    <a class="a1_font">이용약관</a>
+                                    <span class="a1_font">개인정보 처리방침</span>
+                                    <span class="a1_font">이용약관</span>
                                 </div>
                         </div>
                     </div>
